feat: add select background, non-dynamic

--- a/extras/vimium-c/vimium-c.css.erb
+++ b/extras/vimium-c/vimium-c.css.erb
@@ -351,3 +351,7 @@ body {
 /* #find:host */
 
 /* #find:selection */
+::selection {
+  background-color: #F49F15 !important;
+  color: #000000 !important;
+}
